fix: login username issue
